# apm-mms-analyzer

./: .gitignore  README.md  pyproject.toml
apm_mms_analyzer/: __init__.py  ai_report.py  cli.py  fetcher.py  html_report.py  patterns.py
splunk_metrics_advisor/: __init__.py  cli.py  custom_metrics_ai.py  custom_metrics_fetcher.py  custom_metrics_patterns.py  fetcher.py  html_report.py
