[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "splunk-metrics-advisor"
version = "0.2.0"
description = "AI-powered metrics cardinality analysis for Splunk Observability Cloud — APM MMS and custom IM metrics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "boto3>=1.28",
]

[project.scripts]
metrics-advisor = "splunk_metrics_advisor.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["splunk_metrics_advisor"]
